# aoc-framework

./: .gitignore  Cargo.toml
aoc-base/: Cargo.toml
aoc-base/src/: checker.rs  lib.rs
aoc-derive/: Cargo.toml
aoc-derive/src/: lib.rs
aoc-derive/tests/: tests.rs
src/: bcd.rs  direction.rs  grid.rs  helpers.rs  lib.rs  point.rs  stackvec.rs
