[package]
name = "aoc-base"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
atty = "0.2.14"
itertools = "0.10.5"
reqwest = { version = "0.11.12", features = ["blocking", "default-tls", "cookies"] }
